Fix alignment of suffle/repeat
https://twitter.com/LuigiHann/status/959287249161474048

--- a/css/main-window.css
+++ b/css/main-window.css
@@ -374,7 +374,7 @@
 #winamp2-js .shuffle-repeat {
     position: absolute;
     top: 89px;
-    left: 163px;
+    left: 164px;
     width: 74px;
 }
 
